<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edIdade"
        android:layout_width="139dp"
        android:layout_height="49dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="252dp"
        android:ems="10"
        android:hint="@string/idade"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edMatricula"
        android:layout_width="184dp"
        android:layout_height="49dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="252dp"
        android:ems="10"
        android:hint="@string/matricula"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edNome"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="104dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbHorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbHorista" />

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbTitular" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="228dp"
        android:layout_height="35dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnProx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="332dp"
        android:text="@string/btnProx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>